--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 *.amr
 *.mp3
 maker/out/*
-maker/static/images/qr/*.jpg
+maker/static/images/qr/*.png
 maker/saved/*
 wx/saved/*
 wx/saved/msgimgs/*
